--- a/script/build
+++ b/script/build
@@ -11,4 +11,4 @@ fi
 
 echo "Building $NAME $TAG"
 docker build -t $NAME-build -f Dockerfile.build .
-docker run -ti --rm -e TAG -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):/go/src/github.com/$REPO -w /go/src/github.com/$REPO $NAME-build make TAG=$TAG build image
+docker run --rm -e TAG -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):/go/src/github.com/$REPO -w /go/src/github.com/$REPO $NAME-build make TAG=$TAG build image
