--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,5 @@
-FROM golang:1.3-cross
+FROM alpine:latest
+RUN apk add -U go
 RUN go get github.com/tools/godep
 ADD . /go/src/github.com/ehazlett/conduit
 ADD https://get.docker.com/builds/Linux/x86_64/docker-1.5.0 /usr/local/bin/docker
