--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,14 @@
-FROM golang:1.3-cross
+FROM golang:1.6-alpine
+RUN apk add -U git build-base
 RUN go get github.com/tools/godep
-ADD . /go/src/github.com/ehazlett/conduit
-ADD https://get.docker.com/builds/Linux/x86_64/docker-1.5.0 /usr/local/bin/docker
-RUN chmod +x /usr/local/bin/docker
-WORKDIR /go/src/github.com/ehazlett/conduit
+ENV DOCKER_VERSION 1.10.3
+ENV APP conduit
+ENV REPO ehazlett/$APP
 
+RUN curl -sL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION} > /usr/local/bin/docker && \
+    chmod +x /usr/local/bin/docker
+
+WORKDIR /go/src/github.com/$REPO
+
+COPY . /go/src/github.com/$REPO
+RUN make build
